Fixed bugs on mobile, delete button display  and hover styles

--- a/src/sass/mixins.sass
+++ b/src/sass/mixins.sass
@@ -1,3 +1,7 @@
+@mixin mobile-xl
+    @media (max-width: 768px)
+        @content
+    
 @mixin mobile-md
     @media ( max-width: 540px )
         @content
